// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VTextField.ts should apply theme to label, counter, messages and icons 1`] = `
<div class="v-input theme--light v-text-field">
  <div class="v-input__prepend-outer">
    <div class="v-input__icon v-input__icon--prepend">
      <i class="v-icon notranslate theme--light material-icons"
         aria-hidden="true"
      >
        prepend
      </i>
    </div>
  </div>
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-input__prepend-inner">
        <div class="v-input__icon v-input__icon--prepend-inner">
          <i class="v-icon notranslate theme--light prepend prepend-inner"
             aria-hidden="true"
          >
          </i>
        </div>
      </div>
      <div class="v-text-field__slot">
        <label class="v-label theme--light"
               for="input-193"
               aria-hidden="false"
               style="left: 0px; position: absolute;"
        >
          foo
        </label>
        <input id="input-193"
               type="text"
        >
      </div>
      <div class="v-input__append-inner">
        <div class="v-input__icon v-input__icon--append">
          <i class="v-icon notranslate theme--light material-icons"
             aria-hidden="true"
          >
            append
          </i>
        </div>
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <div class="v-messages__wrapper">
          <div class="v-messages__message">
            bar
          </div>
        </div>
      </div>
      <div class="v-counter theme--light">
        0
      </div>
    </div>
  </div>
  <div class="v-input__append-outer">
    <div class="v-input__icon v-input__icon--append-outer">
      <i class="v-icon notranslate theme--light append append-outer"
         aria-hidden="true"
      >
      </i>
    </div>
  </div>
</div>
`;

exports[`VTextField.ts should have prefix and suffix 1`] = `
<div class="v-input theme--light v-text-field v-text-field--prefix">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-text-field__slot">
        <div class="v-text-field__prefix">
          $
        </div>
        <input id="input-119"
               type="text"
        >
        <div class="v-text-field__suffix">
          .com
        </div>
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VTextField.ts should hide messages if no messages and hide-details is auto 1`] = `
<div class="v-input v-input--hide-details theme--light v-text-field">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-text-field__slot">
        <input id="input-211"
               type="text"
        >
      </div>
    </div>
  </div>
</div>
`;

exports[`VTextField.ts should hide messages if no messages and hide-details is auto 2`] = `
<div class="v-input theme--light v-text-field">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-text-field__slot">
        <input id="input-211"
               type="text"
        >
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <div class="v-messages__wrapper">
        </div>
      </div>
      <div class="v-counter theme--light">
        0 / 7
      </div>
    </div>
  </div>
</div>
`;

exports[`VTextField.ts should hide messages if no messages and hide-details is auto 3`] = `
<div class="v-input v-input--has-state theme--light v-text-field error--text">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-text-field__slot">
        <input id="input-211"
               type="text"
        >
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light error--text"
           role="alert"
      >
        <div class="v-messages__wrapper">
          <div class="v-messages__message message-transition-enter-from message-transition-enter-active">
            required
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VTextField.ts should not display counter when set to false/undefined/null 1`] = `
<div class="v-input theme--light v-text-field"
     maxlength="50"
>
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-text-field__slot">
        <input maxlength="50"
               id="input-35"
               type="text"
        >
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <div class="v-messages__wrapper">
        </div>
      </div>
      <div class="v-counter theme--light">
        0 / 50
      </div>
    </div>
  </div>
</div>
`;

exports[`VTextField.ts should not display counter when set to false/undefined/null 2`] = `
<div class="v-input theme--light v-text-field"
     maxlength="50"
>
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-text-field__slot">
        <input maxlength="50"
               id="input-35"
               type="text"
        >
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VTextField.ts should render component and match snapshot 1`] = `
<div class="v-input theme--light v-text-field">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-text-field__slot">
        <input id="input-1"
               type="text"
        >
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VTextField.ts should render component with async loading and custom progress and match snapshot 1`] = `
<div class="v-input v-input--is-loading theme--light v-text-field">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-text-field__slot">
        <input id="input-102"
               type="text"
        >
      </div>
      <div class="v-progress-linear v-progress-linear--visible theme--light"
           role="progressbar"
           aria-valuemin="0"
           aria-valuemax="100"
           style="height: 7px;"
      >
        <div class="v-progress-linear__background orange"
             style="opacity: 0.3; left: 0%; width: 100%;"
        >
        </div>
        <div class="v-progress-linear__buffer">
        </div>
        <div class="v-progress-linear__indeterminate v-progress-linear__indeterminate--active">
          <div class="v-progress-linear__indeterminate long orange">
          </div>
          <div class="v-progress-linear__indeterminate short orange">
          </div>
        </div>
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VTextField.ts should render component with async loading and match snapshot 1`] = `
<div class="v-input v-input--is-loading theme--light v-text-field">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-text-field__slot">
        <input id="input-94"
               type="text"
        >
      </div>
      <div class="v-progress-linear v-progress-linear--absolute v-progress-linear--visible theme--light"
           role="progressbar"
           aria-valuemin="0"
           aria-valuemax="100"
           style="height: 2px;"
      >
        <div class="v-progress-linear__background primary"
             style="opacity: 0.3; left: 0%; width: 100%;"
        >
        </div>
        <div class="v-progress-linear__buffer">
        </div>
        <div class="v-progress-linear__indeterminate v-progress-linear__indeterminate--active">
          <div class="v-progress-linear__indeterminate long primary">
          </div>
          <div class="v-progress-linear__indeterminate short primary">
          </div>
        </div>
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>
`;
